--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3'
 
 services:
   web: 
-    build: 
-      context: . 
-      dockerfile: ./build/dockerfile
+    build: .
     ports:
-      - 80:80
+      - 81:80
       
