--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,6 @@ version: '3'
 
 services:
   web: 
-    build: 
-      context: . 
-      dockerfile: ./build/dockerfile
+    build: .
     ports:
       - 80:80
-      
