--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -11,3 +11,5 @@ services:
       - .:/code
    ports:
       - "8000:8000"
+   environment:
+   - DJANGO_SETTINGS_MODULE=fantasy_hockey.prod_settings
