update requrements file

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,5 +2,7 @@ Django==1.11
 django-bootstrap4==0.0.7
 django-compat==1.0.15
 django-crispy-forms==1.7.2
-pytz==2018.7
+ipaddress==1.0.16
+pygeoip==0.3.2
+pytz==2016.6
 six==1.12.0
