--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     restart: always
     depends_on:
       - db    
+    command: ["./wait-port.sh", "db:3306", "--","./docker-entrypoint.sh"]
     
   db:
     image: mysql
@@ -23,6 +24,7 @@ services:
       MYSQL_PASSWORD: xu2Cuosh
     volumes:
       - /var/log/app/mysql:/var/log/mysql
+      - /var/lib/mysql:/var/lib/mysql
 
   adminer:
     image: adminer
